# ppt2pdf

./: LICENSE  README.md  pyproject.toml
src/ppt2pdf/: __init__.py  __main__.py  cli.py  converter.py
tests/: test_cli.py  test_converter.py
