[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt2pdf"
version = "0.1.0"
description = "Convert Microsoft PowerPoint presentations to PDF using LibreOffice"
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]
dependencies = []
keywords = ["powerpoint", "pdf", "converter", "libreoffice"]
dynamic = []

[project.urls]
Homepage = "https://github.com/yourname/ppt2pdf"
Documentation = "https://github.com/yourname/ppt2pdf#readme"
"Issue Tracker" = "https://github.com/yourname/ppt2pdf/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "mypy>=1.5",
]

[project.scripts]
ppt2pdf = "ppt2pdf.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
